# zero2prod

./: Cargo.toml  Dockerfile  README.md  config.toml  default_12823314920844681122_0_55701.profraw  default_12823314920844681122_0_55702.profraw  default_12823314920844681122_0_55716.profraw  default_12823314920844681122_0_55717.profraw  default_12823314920844681122_0_55718.profraw  default_12823314920844681122_0_57884.profraw  default_12823314920844681122_0_57885.profraw  default_12823314920844681122_0_57901.profraw  default_12823314920844681122_0_57902.profraw  default_12823314920844681122_0_57903.profraw  default_12823314920844681122_0_59917.profraw  default_12823314920844681122_0_59918.profraw  default_12823314920844681122_0_59929.profraw  default_12823314920844681122_0_59930.profraw  default_12823314920844681122_0_59931.profraw  default_12823314920844681122_0_62200.profraw  default_12823314920844681122_0_62201.profraw  default_12823314920844681122_0_62212.profraw  default_12823314920844681122_0_62213.profraw  default_12823314920844681122_0_62214.profraw  default_12823314920844681122_0_64414.profraw  default_12823314920844681122_0_64415.profraw  default_12823314920844681122_0_64426.profraw  default_12823314920844681122_0_64427.profraw  default_12823314920844681122_0_64428.profraw  default_12823314920844681122_0_66468.profraw  default_12823314920844681122_0_66469.profraw  default_12823314920844681122_0_66478.profraw  default_12823314920844681122_0_66479.profraw  default_12823314920844681122_0_66480.profraw  default_12823314920844681122_0_68616.profraw  default_12823314920844681122_0_68617.profraw  default_12823314920844681122_0_68626.profraw  default_12823314920844681122_0_68627.profraw  default_12823314920844681122_0_68628.profraw  default_12823314920844681122_0_70682.profraw  (+360 more)
.github/workflows/: main.yml
migrations/: 20230126182603_create_subscriptions_table.sql
scripts/: init_db.sh
src/: config.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
