[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.0"
chrono = "0.4.23"
config = "0.13.3"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
uuid = { version = "1.2.2", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.14"
