[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.0"
chrono = "0.4.23"
config = "0.13.3"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.2"
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = [
    "registry",
    "env-filter",
] }
uuid = { version = "1.2.2", features = ["v4"] }

[dev-dependencies]
once_cell = "1.17.0"
reqwest = "0.11.14"
